--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h2>Official Leadership Voting Portal</h2>
         <p>All students are required to vote responsibly.</p>
 
-        <a href="PASTE_YOUR_GOOGLE_FORM_LINK_HERE" target="_blank">
+        <a href="school election voting system" target="_blank">
             <button>🗳 CAST YOUR VOTE</button>
         </a>
 
