--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h2>Official Leadership Voting Portal</h2>
         <p>All students are required to vote responsibly.</p>
 
-        <a href="school election voting system" target="_blank">
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfogzfRVD_bEZoM8mwTd-WWu_503QvIJ1T_RBsOYjSBRfj3fQ/viewform?embedded=true" target="_blank">
             <button>🗳 CAST YOUR VOTE</button>
         </a>
 
